--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ numpy>=1.20.0
 opencv-python>=4.5.0
 torch>=1.9.0
 torchaudio>=0.9.0
-ffmpeg-python>=0.2.0
+moviepy>=1.0.3  # MoviePy for video/audio processing without FFmpeg
 
 # Audio processing
 pydub>=0.25.1
@@ -12,7 +12,7 @@ soundfile>=0.10.3
 
 # Text processing
 srt>=3.5.0
-deep-translator>=1.9.0  # Replaces googletrans which is often unstable
+deep-translator>=1.9.0  # More stable than googletrans
 
 # Machine learning
 TTS==0.22.0  # Specific version for compatibility
