--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ numpy>=1.20.0
 opencv-python>=4.5.0
 torch>=1.9.0
 torchaudio>=0.9.0
-moviepy>=1.0.3  # MoviePy for video/audio processing without FFmpeg
 
 # Audio processing
 pydub>=0.25.1
@@ -12,16 +11,13 @@ soundfile>=0.10.3
 
 # Text processing
 srt>=3.5.0
-deep-translator>=1.9.0  # More stable than googletrans
+deep-translator>=1.9.0
 
 # Machine learning
-TTS==0.22.0  # Specific version for compatibility
-mediapipe>=0.8.9  # For face detection
+TTS==0.22.0
+mediapipe>=0.8.9
 
 # Utilities
 tqdm>=4.62.0
 argparse>=1.4.0
 requests>=2.25.0
-
-# Optional dependencies - uncomment if needed
-# sadtalker  # Uncomment if using SadTalker for face animation
